@@ -1,5 +1,11 @@
 ﻿Pulse Changelog
 
+Pulse-4.5.7
+ - Added ENS export option in ExportDataViewModel.
+
+Pulse-4.5.6
+ - Reduce the startup time by removing an image.
+
 Pulse-4.5.5
  - Fixed bug in AutoUpdate if the internet did not work, the application would not start.
 
